--- a/app/src/main/res/layout/student_job_show.xml
+++ b/app/src/main/res/layout/student_job_show.xml
@@ -31,14 +31,11 @@
     <TextView
         android:id="@+id/job_description"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="13dp"
-        android:maxLines="1"
-        android:maxLength="50"
-        android:ellipsize="end"
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
