--- a/app/src/main/res/layout/comany_page1_cell.xml
+++ b/app/src/main/res/layout/comany_page1_cell.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/job_title"
+        android:id="@+id/job_title_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -61,5 +61,5 @@
         android:layout_marginTop="10dp"
         android:text="App Status"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/job_title" />
+        app:layout_constraintTop_toBottomOf="@+id/job_title_text_view" />
 </androidx.constraintlayout.widget.ConstraintLayout>
