--- a/app/src/main/res/layout/student_job_show.xml
+++ b/app/src/main/res/layout/student_job_show.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/job_title"
+        android:id="@+id/job_title_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -39,7 +39,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/job_title" />
+        app:layout_constraintTop_toBottomOf="@+id/job_title_text_view" />
 
     <Button
         android:id="@+id/apply_button"
