--- a/app/src/main/res/layout/activity_add_posting_form_page.xml
+++ b/app/src/main/res/layout/activity_add_posting_form_page.xml
@@ -34,13 +34,13 @@
         android:id="@+id/description_text"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="107dp"
+        android:layout_marginBottom="20dp"
         android:layout_marginTop="41dp"
         android:ems="10"
         android:gravity="start|top"
         android:hint="Job Description"
         android:inputType="textMultiLine"
-        app:layout_constraintBottom_toTopOf="@+id/post_button"
+        app:layout_constraintBottom_toTopOf="@+id/brochure_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/job_text" />
@@ -53,4 +53,29 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/brochure_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="16dp"
+        android:text="Upload Brochure"
+        app:layout_constraintBottom_toTopOf="@+id/post_button"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/path_text_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="8dp"
+        android:text="choose pdf file to upload..."
+        app:layout_constraintBottom_toBottomOf="@+id/brochure_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/brochure_button"
+        app:layout_constraintTop_toTopOf="@+id/brochure_button"
+        app:layout_constraintVertical_bias="0.413"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
