--- a/app/src/main/res/layout/activity_apply_form.xml
+++ b/app/src/main/res/layout/activity_apply_form.xml
@@ -40,13 +40,13 @@
         android:gravity="start|top"
         android:hint="Bio"
         android:inputType="textMultiLine"
-        app:layout_constraintBottom_toTopOf="@+id/apply_button"
+        app:layout_constraintBottom_toTopOf="@+id/approve_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/skills_text" />
 
     <Button
-        android:id="@+id/apply_button"
+        android:id="@+id/approve_button"
         android:layout_width="0dp"
         android:layout_height="74dp"
         android:text="APPLY"
