--- a/app/src/main/res/layout/activity_show_job_to_c_c_d.xml
+++ b/app/src/main/res/layout/activity_show_job_to_c_c_d.xml
@@ -16,7 +16,7 @@
             android:id="@+id/company_name_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:hint="Company Name"
             android:textSize="24sp"
@@ -28,7 +28,7 @@
             android:id="@+id/job_title_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="12dp"
             android:text="Job Title"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,8 +38,8 @@
             android:id="@+id/job_description_text_view"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="10dp"
             android:hint="Job Description"
             app:layout_constraintEnd_toEndOf="parent"
@@ -47,31 +47,41 @@
             app:layout_constraintTop_toBottomOf="@+id/job_title_text_view" />
 
         <Button
-            android:id="@+id/approve_button"
-            android:layout_width="match_parent"
+            android:id="@+id/accept_button"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:text="APPLY"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="20dp"
+            android:layout_weight="1"
+            android:backgroundTint="#4CAF50"
+            android:text="Accept"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/job_description_text_view"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintTop_toBottomOf="@+id/download_brochure_button"
+            app:layout_constraintWidth_percent="0.45" />
+
+        <Button
+            android:id="@+id/reject_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="26dp"
+            android:layout_marginTop="20dp"
+            android:layout_weight="1"
+            android:backgroundTint="#F44336"
+            android:text="Reject"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/accept_button"
+            app:layout_constraintTop_toBottomOf="@+id/download_brochure_button"
+            app:layout_constraintWidth_percent="0.45" />
 
         <Button
             android:id="@+id/download_brochure_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="10dp"
             android:text="Download Brochure"
-            app:layout_constraintBottom_toTopOf="@+id/approve_button"
-            app:layout_constraintTop_toBottomOf="@+id/job_description_text_view"
-            tools:layout_editor_absoluteX="9dp" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/job_description_text_view" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
