--- a/app/src/main/res/layout/student_page1_cell.xml
+++ b/app/src/main/res/layout/student_page1_cell.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/company_name"
+        android:id="@+id/company_name_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -26,10 +26,10 @@
         android:layout_marginTop="12dp"
         android:text="Job Title"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/company_name" />
+        app:layout_constraintTop_toBottomOf="@+id/company_name_text_view" />
 
     <TextView
-        android:id="@+id/job_description"
+        android:id="@+id/job_description_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
