--- a/app/src/main/res/layout/activity_show_job_to_c_c_d.xml
+++ b/app/src/main/res/layout/activity_show_job_to_c_c_d.xml
@@ -83,5 +83,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/job_description_text_view" />
 
+        <TextView
+            android:id="@+id/company_email_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="16dp"
+            android:hint="Company Email"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
