--- a/app/src/main/res/layout/company_edit_profile_page.xml
+++ b/app/src/main/res/layout/company_edit_profile_page.xml
@@ -81,24 +81,27 @@
 
     <EditText
         android:id="@+id/CPHONE_ET"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="phone"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/CNAME_ET"
         app:layout_constraintTop_toBottomOf="@+id/CNAME_ET" />
 
     <EditText
         android:id="@+id/CNAME_ET"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginStart="58dp"
+        android:layout_marginTop="40dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/name_text"
         app:layout_constraintTop_toBottomOf="@+id/cupdate_image_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
